# field-skill-manage

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.en.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
docs/: IMPLEMENTATION_CHECKLIST.md
docs/features/: P0-core-experience.md  P1-developer-experience.md  P2-workflow-enhancement.md  P3-polish.md
docs/superpowers/plans/: 2026-04-19-skillbase-metadata.md  2026-04-20-skillbase-dependencies.md  2026-04-23-local-skill-migration.md
docs/superpowers/specs/: 2026-04-19-skillbase-metadata-design.md  2026-04-20-phase2-4-roadmap.md  2026-04-23-local-skill-migration-design.md
scripts/: version-bump.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  git_sync.rs  history.rs  mod.rs  preview.rs  skill.rs  update.rs  version.rs
src-tauri/src/models/: config.rs  history.rs  mod.rs  skill.rs  update.rs
src-tauri/src/services/: git_service.rs  hash_service.rs  history_service.rs  mod.rs  skill_service.rs  update_service.rs
src/composables/: useTheme.ts
src/i18n/: index.ts  useLocale.ts
src/i18n/locales/: en-US.json  (+1 more)
src/router/: index.ts
src/stores/: config.ts  project.ts  skill.ts  update.ts
src/styles/: global.css
src/types/: index.ts
src/views/: GlobalView.vue  GuideView.vue  ProjectDetailView.vue  ProjectListView.vue  ProjectView.vue  SettingsView.vue
(+13 files in other folders)
